Contract management with AUCA integration